# parse-gcode

./: CHANGELOG.md  parse-gcode.cabal  test-project.cabal
app/: Main.hs
doc/: GRAMMAR.md
src/: Data.hs  Eval.hs  Interpreter.hs  Parser.hs  Print.hs  Printer.hs
test/: Spec.hs
test/programs/: cycle-test.gcode  expr-test.gcode  hello-world.gcode
