cabal-version:      2.4
name:               parse-gcode
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             dgpratt
maintainer:         1676341+dgpratt@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Data, Parser, Printer, Eval, Interpreter

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.0.0,
                      megaparsec,
                      parser-combinators,
                      mtl,
                      text,
                      containers,
                      numbers
    hs-source-dirs:   src
    default-language: Haskell2010

executable parse-gcode
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.0.0,
        megaparsec,
        parse-gcode,
        text

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite parse-gcode-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base ^>=4.17.0.0,
        QuickCheck,
        megaparsec,
        parse-gcode,
        text
    hs-source-dirs: test
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010